--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
   <title>EXAMPLEAPP</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="favicon.ico" type="image/x-icon"> 
   <link rel="stylesheet" href="/font-awesome/css/all.min.css">
+  <script src="https://kit.fontawesome.com/2faa907ac0.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
